# University_Sem7

./: .gitignore  .gitmodules  TODO.md
CloudParcs/: solution.py
EcoProcessModeling/: Lab1.xlsx  Lab2.xlsx  Lab3.xlsx  Lab4.docx  README.md
EcoProcessModeling/Lab5/: Lab5.docx  Lab5_computations.xlsx  code.py
EcoProcessModeling/Theory/: Теорія.3.docx
IT/: Makefile  result.md  variant.txt
IT/DB/: .gitignore  Makefile  go.mod  go.sum  launch_grpc_client.sh
IT/DB/model/proto/: data.proto  database.proto  database_grpc_service.proto  table.proto
IT/DB/src/: main.go
IT/DB/src/database/: database.go
IT/DB/src/database/table/: .table.go.swp  table.go  utils.go
IT/DB/src/server/grpc/: grpc_server.go  utils.go
IT/DB/src/utils/: utils.go
IT/DB/test/: database_test.go  utils.go
IT/Frontend/db/: .babelrc  .gitignore  package-lock.json  package.json  webpack.config.js
IT/Frontend/db/public/: index.html
IT/Frontend/db/src/: App.jsx  Theme.js  index.js
IT/Frontend/db/src/components/: Data.jsx  Database.jsx  Header.jsx  MainContent.jsx  Table.jsx
IT/Frontend/db/src/components/dialogs/: AddDatabase.jsx  AddTable.jsx  ChangeData.jsx
IT/Frontend/db/src/styles/: index.css
IT/Frontend/db/src/test/: database.js
IntilligentDataProcessing/: README.md  report.Rmd
TK/: CMakeLists.txt  num_to_speach.py
TK/audio/: вісім.m4a  вісімдесят.m4a  вісімнадцять.m4a  вісімсот.m4a  два.m4a  двадцять.m4a  дванадцять.m4a  дві.m4a  двісті.m4a  дев'яносто.m4a  дев'ятнадцять.m4a  дев'ятсот.m4a  дев'ять.m4a  десять.m4a  кома.m4a  мільйон.m4a  мінус.m4a  нуль.m4a  один.m4a  одинадцять.m4a  одна.m4a  п'ятдесят.m4a  п'ятсот.m4a  п'ять.m4a  сорок.m4a  сто.m4a  сім.m4a  сімдесят.m4a  сімсот.m4a  тисяч.m4a  тисяча.m4a  тисячі.m4a  три.m4a  тридцять.m4a  тринадцять.m4a  триста.m4a  чотири.m4a  чотириста.m4a  чотирнадцять.m4a  шістдесят.m4a  (+3 more)
TK/src/: audio-player.hpp  audio-player.mm  audio-player.mm.h  audio_converter.h  audio_player.h  audio_player.mm  main.cpp  num-speaker.cpp  num-speaker.hpp
TK/src/utils/: logger.hpp
